--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
+    "react-crossfade-image": "^1.1.1",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "seamless-immutable": "^7.1.4"
